--- a/index.html
+++ b/index.html
@@ -126,11 +126,12 @@
     <div class="topnav">
         
         
-        <a style="float:left" href="#contact">icon</a>
+        <a style="float:left" href="#home">icon</a>
         <input style="float:left" type="text" placeholder="Search..">
         <a style="float:right" href="#contact">Contact</a>
         <a style="float:right" href="#about">About</a>
         <a style="float:right" class="active" href="#home">Home</a>
-      </div>
+    </div>
+
 
 </body>
