Updated Navbar and fixed bg

--- a/index.html
+++ b/index.html
@@ -6,9 +6,17 @@
     * {box-sizing: border-box;}
     
     body {
+
+      background-size: 100%;
+
       margin: 0;
       font-family: Arial, Helvetica, sans-serif;
     }
+
+    /* body.background{
+      width: 50%;
+      height: 50%;
+    } */
     
     .topnav {
       overflow: hidden;
