--- a/login.html
+++ b/login.html
@@ -5,6 +5,7 @@
 </head>
 <style>
 body {
+  background-size: 100%;
   margin: 0;
 }
 
@@ -42,7 +43,7 @@ li a:hover {
 <ul>
 <div class="icon-bar">
   
-  <li><a href="index.php">Home</a></li>
+  <li><a href="index.html">Home</a></li>
   <li><a class="active" href="register.html">Sign Up</a></li>
   <li><a href="explore.html">Explore</a></li>
   <li><a href="contact.html">Contact</a></li>
