--- a/register.html
+++ b/register.html
@@ -36,7 +36,7 @@
 
 			<div class="topnav" >
 				<a class="active"  href="#"><i class="fa fa-home"></i></a>
-				<li><a href="index.php">Home</a></li>
+				<li><a href="index.html">Home</a></li>
 				<li><a href="login.html">Login</a></li>
 				<li><a href="explore.html">Explore</a></li>
 				<li><a href="#About">About</a></li>
