--- a/register.html
+++ b/register.html
@@ -4,92 +4,47 @@
 
 <head>
 	<link rel="stylesheet" href="register.css">
-
+	<link rel="stylesheet" href="navbar.css">
 	<title>Register</title>
-	<script>
-		// Get the modal
-		var modal = document.getElementById('id01');
-
-		// When the user clicks anywhere outside of the modal, close it
-		window.onclick = function (event) {
-			if (event.target == modal) {
-				modal.style.display = "none";
-			}
-		}
-
-		function validateForm() {
-			var x = document.forms["myForm"]["name"].value;
-			if (x == "") {
-				alert("Name must be filled out");
-				return false;
-			}
-		}
-	</script>
-
 
 </head>
 
 <body>
-	<ul>
-		<div class="icon-bar">
-
-
-			<div class="topnav" >
-				<a class="active"  href="#"><i class="fa fa-home"></i></a>
-				<li><a href="index.html">Home</a></li>
-				<li><a href="login.html">Login</a></li>
-				<li><a href="explore.html">Explore</a></li>
-				<li><a href="#About">About</a></li>
-			</div>
-
-	</ul>
+	<div class="topnav">
+		<a style="float:left" href="index.html">icon</a>
+		<a style="float:right" class="active" href="#home">Home</a>
+		<a style="float:right" href="#contact">Contact</a>
+		<a style="float:right" href="#about">About</a>
+		<a style="float:right" href="register.html">Sign Up</a>
+		
 	</div>
-	<form name="myForm" action="" onsubmit="return validateForm()" method="post" style="border:1px solid #ccc">
+	<form action="/action_page.php" style="border:1px solid #ccc">
 		<div class="container">
-			<h1>Sign Up</h1>
-			<p>Please fill in this form to create an account.</p>
-			<hr>
-
-			<label for="name"><b>Name</b></label>
-			<input type="text" placeholder="Enter Name" name="name" required>
-
-			<label for="email"><b>Email</b></label>
-			<input type="text" placeholder="Enter Email" name="email" required>
-
-
-			<label for="phone"><b>Contact</b></label>
-			<input type="text" placeholder="Enter Phone No." name="phone" required>
-
-			<label for="gender"><b>Gender</b></label>
-			<br>
-			<br>
-			<input type="radio" id="male" name="gender" value="male" required>
-			<label for="male">Male</label><br>
-			<input type="radio" id="female" name="gender" value="female">
-			<label for="female">Female</label><br>
-			<input type="radio" id="other" name="gender" value="other">
-			<label for="other">Other</label>
-			<br>
-			<br>
-
-			<label for="psw"><b>Password</b></label>
-			<input type="password" placeholder="Enter Password" name="psw">
-
-			<label for="psw-repeat"><b>Re-Enter Password</b></label>
-			<input type="password" placeholder="Re-Enter Password" name="psw-repeat" required>
-
-			<label>
-				<input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> Remember me
-			</label>
-
-			<p>By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
-
-			<div class="clearfix">
-				<button type="button" class="cancelbtn">Cancel</button>
-				<button type="submit" class="signupbtn" name="SignUp">Sign Up</button>
-			</div>
+		  <h1>Sign Up</h1>
+		  <p>Please fill in this form to create an account.</p>
+		  <hr>
+	  
+		  <label for="email"><b>Email</b></label>
+		  <input type="text" placeholder="Enter Email" name="email" required>
+	  
+		  <label for="psw"><b>Password</b></label>
+		  <input type="password" placeholder="Enter Password" name="psw" required>
+	  
+		  <label for="psw-repeat"><b>Repeat Password</b></label>
+		  <input type="password" placeholder="Repeat Password" name="psw-repeat" required>
+		  
+		  <label>
+			<input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> Remember me
+		  </label>
+		  
+		  <p>By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
+	  
+		  <div class="clearfix">
+			<button type="button" class="cancelbtn">Cancel</button>
+			<button type="submit" class="signupbtn">Sign Up</button>
+		  </div>
 		</div>
-	</form>
+	  </form>
 
 
 
