--- a/register.html
+++ b/register.html
@@ -5,6 +5,7 @@
 <head>
 	<link rel="stylesheet" href="register.css">
 	<link rel="stylesheet" href="navbar.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<title>Register</title>
 
 </head>
@@ -12,7 +13,7 @@
 <body>
 	<div class="topnav">
 		<a style="float:left" href="index.html">icon</a>
-		<a style="float:right" class="active" href="#home">Home</a>
+		<a style="float:right" class="active" href="#home"><i class="fa fa-home"></i></a>
 		<a style="float:right" href="#contact">Contact</a>
 		<a style="float:right" href="#about">About</a>
 		<a style="float:right" href="register.html">Sign Up</a>
