--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
   <title>Blogr</title>
   <link rel="stylesheet" href="navbar.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body background="images/bg.jpg">
 
     <div class="topnav">
         <a style="float:left" href="index.html">icon</a>
-        <a style="float:right" class="active" href="#home">Home</a>
+        <a style="float:right" class="active" href="#home"><i class="fa fa-home"></i></a>
         <a style="float:right" href="#contact">Contact</a>
         <a style="float:right" href="#about">About</a>
         <a style="float:right" href="login.html">Login</a>
