--- a/login.html
+++ b/login.html
@@ -4,13 +4,14 @@
   <title>Login</title>
   <link rel="stylesheet" href="login.css">
   <link rel="stylesheet" href="navbar.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body background="images/bg.jpg">
 
   <div class="topnav">
     <a style="float:left" href="index.html">icon</a>
-    <a style="float:right" class="active" href="index.html">Home</a>
+    <a style="float:right" class="active" href="index.html"><i class="fa fa-home"></i></a>
     <a style="float:right" href="#contact">Contact</a>
     <a style="float:right" href="#about">About</a>
     <a style="float:right" href="register.html">Sign Up</a>
