--- a/register.html
+++ b/register.html
@@ -16,7 +16,7 @@
 		<a style="float:right" class="active" href="#home"><i class="fa fa-home"></i></a>
 		<a style="float:right" href="#contact">Contact</a>
 		<a style="float:right" href="#about">About</a>
-		<a style="float:right" href="register.html">Sign Up</a>
+		<a style="float:right" href="login.html">Login</a>
 		
 	</div>
 	<form action="/action_page.php" style="border:1px solid #ccc">
