--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
 <body background="images/bg.jpg">
 
   <div class="topnav">
-    <a style="float:left" href="index.html">icon</a>
+    <a style="float:left"  href="index.html"><strong>Blogr</strong></a>
     <a style="float:right" class="active" href="index.html"><i class="fa fa-home"></i></a>
     <a style="float:right" href="#contact">Contact</a>
     <a style="float:right" href="#about">About</a>
