--- a/register.html
+++ b/register.html
@@ -12,7 +12,7 @@
 
 <body>
 	<div class="topnav">
-		<a style="float:left" href="index.html">icon</a>
+		<a style="float:left"  href="index.html"><strong>Blogr</strong></a>
 		<a style="float:right" class="active" href="#home"><i class="fa fa-home"></i></a>
 		<a style="float:right" href="#contact">Contact</a>
 		<a style="float:right" href="#about">About</a>
