--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <div class="topnav">
         <a style="float:left ; font-size: large;"  href="index.html"><strong>Blogr</strong></a>
-        <a style="float:right" class="active" href="#home"><i class="fa fa-home"></i></a>
+        <a style="float:right" class="active" href="index.html"><i class="fa fa-home"></i></a>
         <a style="float:right" href="#contact">Contact</a>
         <a style="float:right" href="#about">About</a>
         <a style="float:right" href="login.html">Login</a>
