--- a/login.html
+++ b/login.html
@@ -5,6 +5,7 @@
   <link rel="stylesheet" href="login.css">
   <link rel="stylesheet" href="navbar.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="shortcut icon" href="images/blogging.png">
 </head>
 
 <body background="images/bg.jpg">
