--- a/register.html
+++ b/register.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" href="register.css">
 	<link rel="stylesheet" href="navbar.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link rel="shortcut icon" href="images/blogging.png">
 	<title>Register</title>
 
 </head>
