--- a/login.html
+++ b/login.html
@@ -40,9 +40,9 @@
         </div>
 
         <div class="col">
-          <div class="hide-md-lg">
-            <p>Or sign in manually:</p>
-          </div>
+          <!-- <div class="hide-md-lg">
+            <p>Or sign in manually:</p> -->
+          <!-- </div> -->
 
           <input type="text" name="username" placeholder="Username" required>
           <input type="password" name="password" placeholder="Password" required>
@@ -56,7 +56,6 @@
   <div class="bottom-container">
     <div class="row">
       <div class="col">
-
       </div>
       <div class="col">
         <a href="#" style="color:white" class="btn">Forgot password?</a>
