js added to login,signup

--- a/login.html
+++ b/login.html
@@ -6,6 +6,18 @@
   <link rel="stylesheet" href="navbar.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="shortcut icon" href="images/blogging.png">
+
+  <script>
+    function validateForm() {
+      var x = document.forms["Login"]["Username"].value;
+      var x = document.forms["Login"]["password"].value;
+      if (x == "") {
+        alert("Name must be filled out");
+        return false;
+      }
+    }
+    </script>
+
 </head>
 
 <body background="images/bg.jpg">
@@ -19,7 +31,7 @@
 
   </div>
   <div class="container" background-color="black">
-    <form action="/action_page.php">
+    <form name="Login" action="/action_page.php" onsubmit="return validateForm()" method="POST">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
       <div class="row">
         <h1 style="text-align:center" color="white">Login with Social Media or Manually</h1>
