--- a/register.html
+++ b/register.html
@@ -9,6 +9,13 @@
 	<link rel="shortcut icon" href="images/blogging.png">
 	<title>Register</title>
 
+	<script>  
+		function validateform(){  
+		var mail=document.signup.email.value;  
+		var password=document.signup.pwd.value;  
+		var rpassword=document.signup.psw-repeat.value;  
+	</script>  
+
 </head>
 
 <body>
@@ -20,7 +27,7 @@
 		<a style="float:right" href="login.html">Login</a>
 		
 	</div>
-	<form action="/action_page.php" style="border:1px solid #ccc">
+	<form name = "signup" action="/action_page.php" style="border:1px solid #ccc" onsubmit="return validateform()" >
 		<div class="container">
 		  <h1>Sign Up</h1>
 		  <p>Please fill in this form to create an account.</p>
