added the index page and css related to it

--- a/index.html
+++ b/index.html
@@ -1,18 +1,27 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>Blogr</title>
-  <link rel="stylesheet" href="navbar.css">
+  <link rel="stylesheet" href="index.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="shortcut icon" href="images/blogging.png">
 </head>
-<body background="images/bg.jpg">
 
-    <div class="topnav">
-        <a style="float:left ; font-size: large;"  href="index.html"><strong>Blogr</strong></a>
-        <a style="float:right" class="active" href="index.html"><i class="fa fa-home"></i></a>
-        <a style="float:right" href="#contact">Contact</a>
-        <a style="float:right" href="#about">About</a>
-        <a style="float:right" href="login.html">Login</a>    
-    </div>
+<body background="images/bg2.jpg">
+
+  <div class="start">
+    <h1>Blogr!</h1>
+    <p>Come for what you love.</p>
+    <p>Stay for what you discover.</p>
+  </div>
+  <div class="sign_in">
+    <p><br>
+    </p>
+    <p>Let's get started!</p>
+    <a href="login.html" class="btn"> Login
+    </a>
+    <a href="register.html" class="btn"> Sign Up!
+    </a>
+  </div>
 </body>
