--- a/login.html
+++ b/login.html
@@ -9,10 +9,14 @@
 
   <script>
     function validateForm() {
-      var x = document.forms["Login"]["Username"].value;
-      var x = document.forms["Login"]["password"].value;
+      var x = document.forms["Login"]["username"].value;
+      var y = document.forms["Login"]["password"].value;
       if (x == "") {
         alert("Name must be filled out");
+        return false;
+      }
+      if (y == "") {
+        alert("Password must be filled out");
         return false;
       }
     }
@@ -52,12 +56,9 @@
         </div>
 
         <div class="col">
-          <!-- <div class="hide-md-lg">
-            <p>Or sign in manually:</p> -->
-          <!-- </div> -->
 
-          <input type="text" name="username" placeholder="Username" required>
-          <input type="password" name="password" placeholder="Password" required>
+          <input type="text" name="username" placeholder="Username" >
+          <input type="password" name="password" placeholder="Password" >
           <input type="submit" value="Login">
         </div>
 
