--- a/navbar.html
+++ b/navbar.html
@@ -9,7 +9,7 @@
 <body background="images/bg.jpg">
 
     <div class="topnav">
-        <a style="float:left"  href="index.html"><strong>Blogr</strong></a>
+        <a style="float:left"  href="xmlwriter.php"><strong>Blogr</strong></a>
         <a style="float:right" class="active" href="#home"><i class="fa fa-home"></i></a>
         <a style="float:right" href="#contact">Contact</a>
         <a style="float:right" href="#about">About</a>
