--- a/register.html
+++ b/register.html
@@ -21,7 +21,7 @@
 		<a style="float:right" href="login.html">Login</a>
 		
 	</div>
-	<form name="Signup" action="/web_project/action_page1.php" onsubmit="return validateForm()" method="POST">
+	<form name="Signup" action="action_page1.php" onsubmit="return validateForm()" method="POST">
 		<div class="container">
 		  <h1>Sign Up</h1>
 		  <p>Please fill in this form to create an account.</p>
